# authentication-sys

./: .env.example  .gitignore  Readme.md  pyproject.toml  requirements.txt
migrations/: env.py
src/: main.py
src/common/auth/: dependencies.py  token.py  user.py
src/common/exceptions/: custom.py  handlers.py
src/common/middleware/: access_logger.py  token_blacklist.py
src/common/response/: auth_errors.py  error_handlers.py  error_schema.py
src/core/: cache.py  celery_app.py  config.py  database.py  email.py
src/manager/models/: token.py  user.py
src/manager/routes/: auth.py  role.py  test_routes.py  user.py
src/manager/schemas/: role.py  user.py
src/manager/services/: auth.py  role.py  user.py
src/tasks/: __init__.py  email_tasks.py
src/utils/: email.py  security.py  strings.py  time.py  validation.py
