[project]
name = "auth-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.5.3",
    "fastapi-mail>=1.5.8",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.28.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
